# diskplan

./: .gitignore  Cargo.toml  LICENSE.md  README.md  diskplan.toml  examples  icon.txt
.github/workflows/: cargo-doc.yml  rust.yml
diskplan-cli/: Cargo.toml
diskplan-config/: Cargo.toml
diskplan-config/src/: cache.rs  doctests.rs  file.rs  lib.rs  roots.rs  tests.rs
diskplan-config/src/tests/: creation.rs  reuse.rs
diskplan-core/src/: config.rs  filesystem.rs  lib.rs  schema.rs  traversal.rs
diskplan-core/src/schema/: expression.rs  roots.rs  tests.rs  text.rs
diskplan-core/src/schema/text/: builder.rs
diskplan-core/src/traversal/: eval.rs  pattern.rs  stack.rs
diskplan-filesystem/: Cargo.toml
diskplan-filesystem/src/: attributes.rs  lib.rs  memory.rs  physical.rs  root.rs
diskplan-schema/: Cargo.toml
diskplan-schema/src/: attributes.rs  cache.rs  expression.rs  lib.rs  text.rs
diskplan-schema/src/text/: builder.rs  error.rs  tests.rs
diskplan-traversal/: Cargo.toml
diskplan-traversal/src/: eval.rs  lib.rs  pattern.rs  stack.rs  tests.rs
diskplan-traversal/src/tests/: attributes.rs  comments.rs  creation.rs  matching.rs
example_schemas/errors/: fail_missing_slash.dsch
examples/: simple-schema.diskplan
examples/quickstart/: diskplan.toml  simple-schema.diskplan
mockups/: make_schema.sh
src/: application.rs  apply.rs  config.rs  context.rs  definition.rs  doctests.rs  eval.rs  expr.rs  filesystem.rs  fromdisk.rs  fromfile.rs  install.rs  item.rs  lib.rs  main.rs  meta.rs  parse.rs  schema.rs  tests.rs  traversal.rs  traverse.rs
src/application/: context.rs  eval.rs  install.rs
src/config/: args.rs  file.rs
src/definition/: fromdisk.rs  fromfile.rs  meta.rs  schema.rs
src/doc/fragments/: input_tree  output_tree  schema
src/expr/: eval.rs  parse.rs
src/filesystem/: attributes.rs  memory.rs  physical.rs
src/schema/: attributes.rs  builder.rs  cache.rs  criteria.rs  expr.rs  expression.rs  meta.rs  roots.rs  tests.rs  text.rs
src/schema/text/: builder.rs  error.rs  properties.rs  tests.rs
src/tests/: attributes.rs  comments.rs  creation.rs  matching.rs  reuse.rs  variables.rs
src/traversal/: eval.rs  pattern.rs  reuse.rs  stack.rs  tests.rs
src/traverse/: eval.rs  pattern.rs  tests.rs
tests/: action_test.rs  action_tests.rs  documentation_tests.rs  syntax_tests.rs
