[workspace]
members = [
    "diskplan-config",
    "diskplan-filesystem",
    "diskplan-schema",
    "diskplan-traversal",
]

[workspace.dependencies]
# Command line argument parsing
clap = { version = "4", features = ["derive"] }
# Error handling and chaining
anyhow = "1.0.66"
# Pattern matching
regex = "1.7.0"
# Schema parsing
nom = "7.1.1"
# Unix permissions and symlinks
nix = "0.26.1"
# Owners and groups
users = "0.11.0"
# Config file format
toml = "0.5.9"
serde = { version = "1.0.148", features = ["derive"] }
# UTF8 paths
camino = { version = "1.1.1", features = ["serde1"] }
# Caching with append only data structures
elsa = "1.7.0"

tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"

[package]
name = "diskplan"
version = "0.1.0"
edition = "2021"
description = "A command line tool and configuration system for constructing directory trees from a set of schemas"
license-file = "LICENSE.md"
repository = "https://github.com/quornian/diskplan"
default-run = "diskplan"

[dependencies]
diskplan-config = { path = "diskplan-config", version = "0.1.0" }
diskplan-filesystem = { path = "diskplan-filesystem", version = "0.1.0" }
diskplan-traversal = { path = "diskplan-traversal", version = "0.1.0" }
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
users.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
