[package]
name = "diskplan-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
diskplan-config = { path = "../diskplan-config" }
diskplan-filesystem = { path = "../diskplan-filesystem" }
diskplan-traversal = { path = "../diskplan-traversal" }
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
users.workspace = true
