[package]
name = "diskplan-config"
version = "0.1.0"
edition = "2021"

[dependencies]
diskplan-schema = { path = "../diskplan-schema" }
diskplan-filesystem = { path = "../diskplan-filesystem" }
anyhow.workspace = true
camino.workspace = true
elsa.workspace = true
log.workspace = true
serde.workspace = true
toml.workspace = true
