[package]
name = "diskplan-config"
version = "0.1.0"
edition = "2021"

[dependencies]
diskplan-schema = { path = "../diskplan-schema", version = "0.1.0" }
diskplan-filesystem = { path = "../diskplan-filesystem", version = "0.1.0" }
anyhow.workspace = true
camino.workspace = true
elsa.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
