[package]
name = "diskplan-filesystem"
version = "0.1.0"
edition = "2021"

[dependencies]
diskplan-config = { path = "../diskplan-config" }
diskplan-schema = { path = "../diskplan-schema" }

# Command line argument parsing
clap = { version = "4", features = ["derive"] }
# Error handling and chaining
anyhow = "1.0.66"
# Pattern matching
regex = "1.7.0"
# Schema parsing
nom = "7.1.1"
# Unix permissions and symlinks
nix = "0.26.1"
# Owners and groups
users = "0.11.0"
# Logging
env_logger = "0.10.0"
log = "0.4.17"
# Config file format
toml = "0.5.9"
serde = { version = "1.0.148", features = ["derive"] }
# UTF8 paths
camino = { version = "1.1.1", features = ["serde1"] }
# Caching with append only data structures
elsa = "1.7.0"
