[package]
name = "diskplan-traversal"
version = "0.1.0"
edition = "2021"

[dependencies]
diskplan-config = { path = "../diskplan-config" }
diskplan-filesystem = { path = "../diskplan-filesystem" }
diskplan-schema = { path = "../diskplan-schema" }
anyhow.workspace = true
camino.workspace = true
log.workspace = true
regex.workspace = true
