[package]
name = "diskplan-traversal"
description = "A library component of Diskplan for applying schemas to disk"
version = "0.1.0"
authors = ["Ian Thompson <quornian@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://quornian.github.io/diskplan/diskplan_traversal/"
homepage = "https://quornian.github.io/diskplan/diskplan_traversal/"
repository = "https://github.com/quornian/diskplan"

[dependencies]
diskplan-config = { path = "../diskplan-config", version = "0.1.0" }
diskplan-filesystem = { path = "../diskplan-filesystem", version = "0.1.0" }
diskplan-schema = { path = "../diskplan-schema", version = "0.1.0" }
anyhow.workspace = true
camino.workspace = true
regex.workspace = true
tracing.workspace = true
